# itgdb

./: .dockerignore  .env.example  .env.proxy-companion.example  .env.vhost.example  .gitignore  LICENSE.md  Pipfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-django.yml  run-compose.yml
chart-viewer/: package-lock.json  package.json  vite.config.ts
chart-viewer/src/: App.css  App.tsx  index.css  main.tsx
chart-viewer/src/components/: NumberInput.tsx  PixiApp.tsx
docs/: batch_csv_format.md  dev_docs.md
itgdb/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
itgdb_site/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  signals.py  storage_backends.py  tasks.py  urls.py  views.py
itgdb_site/migrations/: 0001_initial.py  0002_chart_itgdb_site__steps_t_777d99_idx_and_more.py  0003_packcategory_pack_category.py  0004_packcategory_abbr_packcategory_color.py  0005_search_config.py  0006_chart_release_date_song_links_and_more.py  0007_alter_song_artist_alter_song_artist_translit_and_more.py  0008_chart_upload_date_pack_author_pack_upload_date_and_more.py  0009_chart_has_attacks_song_has_attacks.py  0010_alter_chart_upload_date_alter_pack_upload_date_and_more.py  0011_chart_analysis_song_has_sm_song_has_ssc.py  0012_move_density_data_to_analysis.py  0013_remove_chart_density_graph.py  0014_imagefile_song_and_more.py  0015_rename_length_song_music_length_song_chart_length.py  0016_imagefile_has_alpha.py  0017_alter_song_artist_alter_song_artist_translit_and_more.py  0018_chart_cannot_have_multiple_charts_of_same_diff_slot_and_desc_and_more.py  0019_alter_chart_description.py  0020_chart_release_date_year_only_and_more.py  0021_pack_pack_ini.py
itgdb_site/templatetags/: itgdb_tags.py
itgdb_site/tests/: _common.py  test_admin.py  test_models.py  test_tasks.py  test_utils_analysis.py  test_utils_charts.py  test_utils_uploads.py
itgdb_site/utils/: charts.py  ini.py  path.py  uploads.py  url_fetch.py
(+112 files in other folders)
