[project]
name = ""
version = "0.0.1"
requires-python = "~=3.10.0"
dependencies = [
    "celery~=5.3.6",
    "django~=5.1.4",
    "django-admin-extra-buttons~=1.5.7",
    "django-celery-results~=2.5.1",
    "psycopg~=3.1.14",
    "redis~=5.0.1",
    "simfile~=2.1.1",
    "boto3~=1.35.80",
    "django-storages~=1.14.4",
    "pillow~=11.2.1",
    "django-cleanup~=9.0.0",
    "opencv-python-headless~=4.10.0.84",
    "django-debug-toolbar~=4.4.6",
    "django-mathfilters~=1.0.0",
    "sorl-thumbnail~=12.11.0",
    "django-crispy-forms~=2.3",
    "crispy-bootstrap5~=2024.10",
    "whitenoise~=6.8.2",
    "mega.py~=1.0.8",
    "gdown~=5.2.0",
    "channels[daphne]~=4.2.0",
    "channels-redis~=4.2.1",
    "patool~=3.1.0",
    "sentry-sdk[django]~=2.19.2",
    "python-magic~=0.4.27",
    "beautifulsoup4~=4.12.3",
]

[dependency-groups]
dev = [
    "localstack",
    "awscli-local[ver1]",
    "snakeviz",
]

[tool.uv]
package = false
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
